Disable 'Delete wallet' action if no wallets exist

BUG: 329053
REVIEW: 118956